# kavallerie

./: MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: COPYRIGHT.rst  HISTORY.rst
src/kavallerie/: access.py  actions.py  app.py  auth.py  components.py  contents.py  cors.py  errors.py  events.py  flash.py  lifecycle.py  meta.py  pipeline.py  plugins.py  registries.py  request.py  response.py  routes.py  schema.py  session.py  testing.py  tokenize.py  transaction.py  utils.py
src/kavallerie/pipes/: access.py  authentication.py  cors.py  emailer.py  errors.py  flash.py  session.py  testing.py  transaction.py
src/kavallerie/registries/: __init__.py  blueprints.py  named.py
src/kavallerie/workflow/: __init__.py  components.py  events.py
tests/: conftest.py  test_actions.py  test_application.py  test_auth.py  test_contents.py  test_cors_policy.py  test_datastructures.py  test_emailer.py  test_flash.py  test_pipeline.py  test_query.py  test_request.py  test_security.py  test_session.py  test_sql.py  test_transaction.py  test_transition.py  test_workflow.py
tests/events/: test_events.py  test_subscribers.py
tests/pipes/: test_access_filters.py  test_auth_pipe.py  test_cors.py  test_emailer.py  test_flash.py  test_session.py  test_sql.py  test_transaction.py
tests/plugins/: test_plugin.py  test_plugins.py
tests/routing/: test_namedroutes.py  test_routes.py  test_routing.py  test_views_routing.py
tests/workflow/: test_action.py  test_state.py  test_workflow.py
