[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kavallerie"
version = "0.7"
license = {text = "BSD-3-Clause"}
authors = [{name = "Novareto GmbH", email = "ck@novareto.de"}]
maintainers = [{name = "Novareto GmbH", email = "ck@novareto.de"}]
classifiers = [
  "Environment :: Web Environment", "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License", "Operating System :: OS Independent",
  "Programming Language :: Python", "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]
description = "Full-blown WSGI Framework using Horseman."
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.11"
dependencies = [
  "frozendict",
  "gelidum",
  "horseman>=0.6",
  "http-session>=0.2",
  "importlib-metadata>=6.5",
  "importscan",
  "itsdangerous",
  "jsonschema-rs",
  "postrider",
  "prejudice",
  "roughrider.cors",
  "roughrider.routing",
  "transaction",
  "wrapt",
  "zope.interface"
]

[project.urls]
"Source Code" = "https://github.com/HorsemanWSGI/kavallerie"

[project.optional-dependencies]
test = [
  "WebTest",
  "freezegun",
  "pyhamcrest",
  "pytest",
  "smtpdfix",
  "sqlalchemy.orm",
  "zope.sqlalchemy"
]
