[metadata]
name = kavallerie
version = 0.2
url =
project_urls =
    Source Code = https://github.com/HorsemanWSGI/kavallerie
license = BSD-3-Clause
author = Novareto GmbH & Souheil Chelfouh
author_email = trollfot@gmail.com
maintainer = Novareto GmbH
maintainer_email = ck@novareto.de
description = Full-blown WSGI Framework using Horseman.
long_description = file: README.rst, docs/HISTORY.rst
long_description_content_type = text/x-rst
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
zip_safe = False
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.8

[options.packages.find]
where=src
